Fix paypal spacing issue in product page

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -102,6 +102,18 @@
     .widget__twitter:before {
         right: 30px;
     }
+
+    .ecomproduct .product-actions {
+        width: 35%;
+
+        @media @tablet {
+            width: 100%;
+        }
+    }
+
+    .ecomproduct__paypal-commerce-button-container {
+        margin-top: 20px;
+    }
 }
 
 // End of #migrated-site
